RESOLVED FIXED 250847
Fix race condition for wasm referenced functions
https://bugs.webkit.org/show_bug.cgi?id=250847
Summary Fix race condition for wasm referenced functions
Yijia Huang
Reported 2023-01-19 09:23:51 PST
...
Attachments
Yijia Huang
Comment 1 2023-01-19 09:27:53 PST
Yijia Huang
Comment 2 2023-01-19 09:43:24 PST
EWS
Comment 3 2023-01-24 18:06:22 PST
Committed 259323@main (527e2a01d73c): <https://commits.webkit.org/259323@main> Reviewed commits have been landed. Closing PR #8841 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.