Fix race condition for wasm referenced functions https://bugs.webkit.org/show_bug.cgi?id=250847 rdar://104332636

Reviewed by Mark Lam.

Fix race condition for updating referenced functions while compiling
wasm functions concurrently.

* JSTests/wasm/stress/referenced-function.js: Added.
(async let):
(j.catch):
* JSTests/wasm/stress/resources/funcref-race.wasm: Added.
* Source/JavaScriptCore/wasm/WasmBBQPlan.cpp:
(JSC::Wasm::BBQPlan::compileFunction):
* Source/JavaScriptCore/wasm/WasmLLIntPlan.cpp:
(JSC::Wasm::LLIntPlan::didCompleteCompilation):
* Source/JavaScriptCore/wasm/WasmModuleInformation.h:
(JSC::Wasm::ModuleInformation::referencedFunctions const):
(JSC::Wasm::ModuleInformation::hasReferencedFunction const):
(JSC::Wasm::ModuleInformation::addReferencedFunction const):
* Source/WTF/WTF.xcodeproj/project.pbxproj:
* Source/WTF/wtf/CMakeLists.txt:
* Source/WTF/wtf/FixedBitVector.h: Added.
(WTF::FixedBitVector::concurrentAllocateOnce):
(WTF::FixedBitVector::concurrentTest):
(WTF::FixedBitVector::concurrentTestAndSet):
(WTF::FixedBitVector::testAndSet):
(WTF::FixedBitVector::test):
(WTF::FixedBitVector::findBit const):
(WTF::FixedBitVector::operator== const):
(WTF::FixedBitVector::hash const):
(WTF::FixedBitVector::get const):
(WTF::FixedBitVector::dump const):
(WTF::FixedBitVectorHash::hash):
(WTF::FixedBitVectorHash::equal):
* Tools/TestWebKitAPI/CMakeLists.txt:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Tests/WTF/FixedBitVector.cpp: Added.
(TestWebKitAPI::testFixedBitVectorSize):
(TestWebKitAPI::testFixedBitVectorTest):
(TestWebKitAPI::testFixedBitVectorTestAndSet):
(TestWebKitAPI::testFixedBitVectorConcurrentTest):
(TestWebKitAPI::testFixedBitVectorConcurrentTestAndSet):
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/259323@main